fix: Corrects padding to avoid header overlap

--- a/src/style/markdown.less
+++ b/src/style/markdown.less
@@ -382,7 +382,7 @@
 	h5,
 	h6 {
 		&:target {
-			padding-top: @header-height;
+			padding-top: @header-and-banner-height;
 		}
 	}
 
